--- a/AzureLearning.API/appsettings.json
+++ b/AzureLearning.API/appsettings.json
@@ -24,5 +24,9 @@
     "EmailUsername": "project.shaligraminfotech@gmail.com",
     "FromEmail": "project.shaligraminfotech@gmail.com",
     "FromName": "Payment Gateway"
+  },
+  "AzureBlob": {
+    "ConnectionString": "",
+    "ContainerName": "nilesh-container"
   }
 }
