Added key vault

--- a/AzureLearning.API/appsettings.json
+++ b/AzureLearning.API/appsettings.json
@@ -25,8 +25,9 @@
     "FromEmail": "project.shaligraminfotech@gmail.com",
     "FromName": "Payment Gateway"
   },
-  "AzureBlob": {
-    "ConnectionString": "",
-    "ContainerName": "nilesh-container"
+  "KeyVault": {
+    "VaultUri": "https://nilesh-key-vault.vault.azure.net/",
+    "BlobConnectionStringSecretName": "NileshBlobStorageConnectionString",
+    "BlobContainerNameSecretName": "NileshBlobStorageContainerName"
   }
 }
