--- a/.github/workflows/azure-function-app_test-azure-function.yml
+++ b/.github/workflows/azure-function-app_test-azure-function.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'DemoAzureFunction' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '8.0.x' # set this to the dotnet version to use
 
 jobs:
@@ -39,9 +39,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_390E214741ED4FA69E0CD424A75A01CC }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_04172D91FF8E4FB3A60EC599FDBAB90D }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D7D7B18C1FEC4578835CF45B3091035C }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E3E68C7619D8454ABAD1CA3F67229FFE }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1413759E2DEB4768AD132FF2B6F2D52D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B55299CA2B9143379D3984FF8E490A7B }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
